--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Mvc.Messages/Sakura.AspNetCore.Mvc.Messages.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Mvc.Messages/Sakura.AspNetCore.Mvc.Messages.csproj
@@ -9,24 +9,21 @@
 		<AssemblyName>Sakura.AspNetCore.Mvc.Messages</AssemblyName>
 		<PackageId>Sakura.AspNetCore.Mvc.Messages</PackageId>
 		<PackageTags>ASP.NET;ASP.NETCore;MVC;MVCCore;Bootstrap;Message;Messages</PackageTags>
-		<PackageReleaseNotes>Update to support ASp.NET Core 3.0</PackageReleaseNotes>
+		<PackageReleaseNotes>Using IHtmlContent to improve the generation compatibility.</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
-		<PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
+		<PackageLicenseUrl></PackageLicenseUrl>
 		<GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
 		<GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
 		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
 		<RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<Version>1.1.0</Version>
+		<Version>2.0.0</Version>
 		<RootNamespace>Sakura.AspNetCore.Mvc</RootNamespace>
+		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Sakura.AspNetCore.Messages\Sakura.AspNetCore.Messages.csproj" />
-	</ItemGroup>
-
-	<ItemGroup Condition=" '$(TargetFramework)' != 'netcoreapp3.0' ">
-		<PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="1.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.0' ">
@@ -37,9 +34,14 @@
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
 
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
+		<PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="1.0.0" />
+	</ItemGroup>
+
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
 		<Reference Include="System" />
 		<Reference Include="Microsoft.CSharp" />
+		<PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="1.0.0" />
 	</ItemGroup>
 
 </Project>
