--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Messages.Abstractions/Sakura.AspNetCore.Messages.Abstractions.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Messages.Abstractions/Sakura.AspNetCore.Messages.Abstractions.csproj
@@ -10,7 +10,7 @@
     <AssemblyName>Sakura.AspNetCore.Messages.Abstractions</AssemblyName>
     <PackageId>Sakura.AspNetCore.Messages.Abstractions</PackageId>
     <PackageTags>ASP.NET;ASP.NETCore;Message;Messages</PackageTags>
-    <PackageReleaseNotes>Using IHtmlContent to improve the generation compatibility.</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed security problem using HtmlString.</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
     <PackageLicenseUrl></PackageLicenseUrl>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
@@ -18,7 +18,7 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <RootNamespace>Sakura.AspNetCore</RootNamespace>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
