--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Mvc.TempDataExtensions/Sakura.AspNetCore.Mvc.TempDataExtensions.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Mvc.TempDataExtensions/Sakura.AspNetCore.Mvc.TempDataExtensions.csproj
@@ -10,7 +10,7 @@
 		<AssemblyName>Sakura.AspNetCore.Mvc.TempDataExtensions</AssemblyName>
 		<PackageId>Sakura.AspNetCore.Mvc.TempDataExtensions</PackageId>
 		<PackageTags>ASP.NET;ASP.NETCore;MVC;MVCCore;TempData;ITempDataProvider</PackageTags>
-		<PackageReleaseNotes>Fix bug for .NET Core App 3.0</PackageReleaseNotes>
+		<PackageReleaseNotes>Update the TempData to add IHtmlContent Support.</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
 		<PackageLicenseUrl></PackageLicenseUrl>
 		<GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
@@ -20,7 +20,7 @@
 		<RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
 		<RootNamespace>Sakura.AspNetCore.Mvc</RootNamespace>
 		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-		<Version>1.2.2</Version>
+		<Version>2.0.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
@@ -40,5 +40,9 @@
 		<Reference Include="Microsoft.CSharp" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="1.0.0" />
 	</ItemGroup>
-	
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="1.0.0" />
+	</ItemGroup>
+
 </Project>
